--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./assets/style.css">
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -22,10 +23,10 @@
       <section class="card"id="css-section">
     </h2>CSS</h2>
     <ul>
-      <li>Enter CSS notes</li>
+      <li>A margin indicates how much space we want around the outside of an element.</li>
+      <li>A padding indicates how much space we want around the content inside an element.</li>
       </ul>
-      <section>
-        
+      <section> 
     </section class="card"id="git-section">
   </h2>Git</hs>
   <ul>
@@ -33,7 +34,6 @@
     <li>git checkout -b branch-name: creates a new branch and swithces to it</li>
     <ul>
       <section>
-
 <section class="card" id="javascript-section">
 <h2>JavaScript</h2>
 <ul>
@@ -41,7 +41,6 @@
   <ul>
     <section>
     </main>
-
     <footer>
       <p>I can code!</p>
     </footer>
